2007-01-27  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/ipy_stock_completers.py (runlistpy): fix a
	bug where only .ipy or .py would be completed.  Once the first
	argument to %run has been given, all completions are valid because
	they are the arguments to the script, which may well be non-python
	filenames.

	* IPython/irunner.py (InteractiveRunner.run_source): major updates
	to irunner to allow it to correctly support real doctesting of
	out-of-process ipython code.

	* IPython/Magic.py (magic_cd): Make the setting of the terminal
	title an option (-noterm_title) because it completely breaks
	doctesting.

	* IPython/demo.py: fix IPythonDemo class that was not actually working.

2007-01-24  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (main): fix small bug where extensions were
	not being correctly recognized.

2007-01-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (xiter): Make sure that iterating
	a string containing a single line yields the string itself as the
	only item.

	* IPython/Extensions/ibrowse.py (ibrowse): Avoid entering an
	object if it's the same as the one on the last level (This avoids
	infinite recursion for one line strings).

2007-01-17  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ultraTB.py (AutoFormattedTB.__call__): properly flush
	all output streams before printing tracebacks.  This ensures that
	user output doesn't end up interleaved with traceback output.

2007-01-10  Ville Vainio  <vivainio@gmail.com>

	* Extensions/envpersist.py: Turbocharged %env that remembers
	env vars across sessions; e.g. "%env PATH+=;/opt/scripts" or
	"%env VISUAL=jed".

2007-01-05  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (showtraceback): ensure that we correctly call
	custom handlers in all cases (some with pdb were slipping through,
	but I'm not exactly sure why).

	* IPython/Debugger.py (Tracer.__init__): added new class to